--- a/app/src/main/res/layout/activity_vacation_list.xml
+++ b/app/src/main/res/layout/activity_vacation_list.xml
@@ -7,15 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.VacationListActivity">
 
-    <ScrollView
-        android:id="@+id/vacation_list"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vacation_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-    </ScrollView>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_vacation_button"
