--- a/app/src/main/res/layout/activity_excursion_list.xml
+++ b/app/src/main/res/layout/activity_excursion_list.xml
@@ -7,4 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.ExcursionListActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/excursion_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_excursion_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_add"
+        android:contentDescription="plus sign"
+        android:layout_margin="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
