--- a/app/src/main/res/layout/excursion_list_item.xml
+++ b/app/src/main/res/layout/excursion_list_item.xml
@@ -6,11 +6,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/vacation_list_item_text"
-        android:layout_width="wrap_content"
+        android:id="@+id/excursion_list_item_text"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="List item"
+        android:layout_margin="20dp"
+        android:padding="10dp"
+        android:textSize="20sp"
+        android:background="#ddd"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
