--- a/app/src/main/res/layout/vacation_list_item.xml
+++ b/app/src/main/res/layout/vacation_list_item.xml
@@ -7,10 +7,15 @@
 
     <TextView
         android:id="@+id/vacation_list_item_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="List item"
+        android:layout_margin="20dp"
+        android:padding="10dp"
+        android:textSize="20sp"
+        android:background="#ddd"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
