--- a/app/src/main/res/layout/activity_vaction_detail.xml
+++ b/app/src/main/res/layout/activity_vaction_detail.xml
@@ -7,7 +7,67 @@
     android:layout_height="match_parent"
     tools:context=".ui.VacationDetailActivity">
 
+    <TextView
+        android:id="@+id/vacation_name_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/vacation_name"
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/vacation_description_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/vacation_description_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/vacation_name"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/vacation_name_text"
+        app:layout_constraintBottom_toTopOf="@id/vacation_dates_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/vacation_dates_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/vacation_dates"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/vacation_description_text"
+        app:layout_constraintBottom_toTopOf="@id/vacation_accommodations_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/vacation_accommodations_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/vacation_name"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/vacation_dates_text"
+        app:layout_constraintBottom_toTopOf="@id/vacation_excursion_list_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/vacation_excursion_list_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Excursions:"
+        android:textSize="16sp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/vacation_accommodations_text"
+        app:layout_constraintBottom_toTopOf="@id/vacation_excursion_recycler"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vacation_excursion_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/vacation_excursion_list_text"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
