--- a/app/src/main/res/menu/edit_vacation_menu.xml
+++ b/app/src/main/res/menu/edit_vacation_menu.xml
@@ -4,10 +4,12 @@
     <item
         android:id="@+id/edit"
         android:title="Edit"
-        app:showAsAction="never" />
+        android:icon="@drawable/edit"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/delete"
         android:title="Delete"
-        app:showAsAction="never" />
+        android:icon="@drawable/delete"
+        app:showAsAction="ifRoom" />
 </menu>
