--- a/app/src/main/res/layout/activity_excursion_detail.xml
+++ b/app/src/main/res/layout/activity_excursion_detail.xml
@@ -5,8 +5,45 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20dp"
     tools:context=".ui.ExcursionDetailActivity">
 
+    <TextView
+        android:id="@+id/excursion_name_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Excursion Name"
+        android:textStyle="bold"
+        android:textSize="26sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/excursion_description_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+
+    <TextView
+        android:id="@+id/excursion_description_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui mauris, pharetra eget turpis quis, fermentum dignissim tellus. Suspendisse placerat euismod sollicitudin. Ut a tellus pharetra eros sollicitudin condimentum."
+        android:textSize="16sp"
+        android:layout_margin="20dp"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@id/excursion_name_text"
+        app:layout_constraintBottom_toTopOf="@id/excursion_date_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/excursion_date_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Excursion Date"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/excursion_description_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
