--- a/app/src/main/res/layout/activity_vaction_detail.xml
+++ b/app/src/main/res/layout/activity_vaction_detail.xml
@@ -5,25 +5,30 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20dp"
     tools:context=".ui.VacationDetailActivity">
 
     <TextView
         android:id="@+id/vacation_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/vacation_name"
-        android:textSize="16sp"
+        tools:text="Vacation Name"
+        android:textStyle="bold"
+        android:textSize="26sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/vacation_description_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+
     <TextView
         android:id="@+id/vacation_description_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/vacation_name"
+        tools:text="Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui mauris, pharetra eget turpis quis, fermentum dignissim tellus. Suspendisse placerat euismod sollicitudin. Ut a tellus pharetra eros sollicitudin condimentum."
         android:textSize="16sp"
+        android:layout_margin="20dp"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/vacation_name_text"
         app:layout_constraintBottom_toTopOf="@id/vacation_dates_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,20 +38,36 @@
         android:id="@+id/vacation_dates_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/vacation_dates"
-        android:textSize="16sp"
+        tools:text="StartDate to EndDate"
+        android:textSize="18sp"
+        android:textStyle="italic"
         app:layout_constraintTop_toBottomOf="@id/vacation_description_text"
+        app:layout_constraintBottom_toTopOf="@id/vacation_accommodations_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/vacation_accommodations_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Accommodations"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/vacation_dates_text"
         app:layout_constraintBottom_toTopOf="@id/vacation_accommodations_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
     <TextView
         android:id="@+id/vacation_accommodations_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/vacation_name"
+        tools:text="Accommodations"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/vacation_dates_text"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/vacation_accommodations_label"
         app:layout_constraintBottom_toTopOf="@id/vacation_excursion_list_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -55,12 +76,14 @@
         android:id="@+id/vacation_excursion_list_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Excursions:"
+        android:text="Excursions"
         android:textSize="16sp"
-        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/vacation_accommodations_text"
         app:layout_constraintBottom_toTopOf="@id/vacation_excursion_recycler"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vacation_excursion_recycler"
