--- a/app/src/main/res/layout/vacation_list_item.xml
+++ b/app/src/main/res/layout/vacation_list_item.xml
@@ -14,6 +14,7 @@
         android:padding="10dp"
         android:textSize="20sp"
         android:background="#ddd"
+        android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
