--- a/app/src/main/res/layout/activity_edit_excursion.xml
+++ b/app/src/main/res/layout/activity_edit_excursion.xml
@@ -12,7 +12,7 @@
         android:id="@+id/edit_excursion_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:text="Excursion Name"
         android:textSize="16sp" />
 
     <EditText
