--- a/app/src/main/res/menu/edit_vacation_menu.xml
+++ b/app/src/main/res/menu/edit_vacation_menu.xml
@@ -8,6 +8,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/share"
+        android:title="Share"
+        android:icon="@drawable/share"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/delete"
         android:title="Delete"
         android:icon="@drawable/delete"
