Setup basic notification service

--- a/app/src/main/res/menu/edit_vacation_menu.xml
+++ b/app/src/main/res/menu/edit_vacation_menu.xml
@@ -14,6 +14,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/notify"
+        android:title="Notify"
+        android:icon="@drawable/notify"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/delete"
         android:title="Delete"
         android:icon="@drawable/delete"
