--- a/app/src/main/res/layout/activity_edit_vacation.xml
+++ b/app/src/main/res/layout/activity_edit_vacation.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -13,7 +12,7 @@
         android:labelFor="@id/edit_vacation_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="@string/name"
         android:textSize="16sp" />
 
     <EditText
@@ -32,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Description"
+        android:text="@string/description"
         android:textSize="16sp" />
 
     <EditText
@@ -49,24 +48,28 @@
         android:id="@+id/vacation_start_date_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Date"
+        android:text="@string/start_date"
+        android:background="@color/blue"
         android:textSize="16sp"
-        android:layout_marginTop="20dp"/>
+        android:elevation="10dp"
+        android:layout_margin="20dp"/>
 
     <Button
         android:id="@+id/vacation_end_date_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="End Date"
+        android:text="@string/end_date"
+        android:elevation="10dp"
+        android:background="@color/blue"
         android:textSize="16sp"
-        android:layout_marginTop="20dp"/>
+        android:layout_margin="20dp"/>
 
     <TextView
         android:id="@+id/edit_vacation_accommodations_label"
         android:labelFor="@id/edit_vacation_accommodations"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accommodations"
+        android:text="@string/accommodations"
         android:textSize="16sp"
         android:layout_marginTop="20dp"/>
 
