--- a/app/src/main/res/layout/activity_vacation_list.xml
+++ b/app/src/main/res/layout/activity_vacation_list.xml
@@ -19,9 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:srcCompat="@android:drawable/ic_menu_add"
-        android:contentDescription="plus sign"
+        app:srcCompat="@drawable/add"
+        android:contentDescription="@string/fab_button_description"
         android:layout_margin="20dp"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
