--- a/app/src/main/res/layout/activity_vaction_detail.xml
+++ b/app/src/main/res/layout/activity_vaction_detail.xml
@@ -20,7 +20,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
     <TextView
         android:id="@+id/vacation_description_text"
         android:layout_width="wrap_content"
@@ -50,7 +49,7 @@
         android:id="@+id/vacation_accommodations_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accommodations"
+        android:text="@string/accommodations"
         android:textStyle="bold"
         android:textSize="16sp"
         android:layout_marginTop="20dp"
@@ -58,7 +57,6 @@
         app:layout_constraintBottom_toTopOf="@id/vacation_accommodations_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 
     <TextView
         android:id="@+id/vacation_accommodations_text"
@@ -76,7 +74,7 @@
         android:id="@+id/vacation_excursion_list_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Excursions"
+        android:text="@string/excursions"
         android:textSize="16sp"
         android:layout_marginTop="20dp"
         android:textStyle="bold"
@@ -92,14 +90,13 @@
         app:layout_constraintTop_toBottomOf="@id/vacation_excursion_list_text"
         app:layout_constraintStart_toStartOf="parent" />
 
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_excursion_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:srcCompat="@android:drawable/ic_menu_add"
-        android:contentDescription="plus sign"
+        app:srcCompat="@drawable/add"
+        android:contentDescription="@string/fab_button_description"
         android:layout_margin="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
