--- a/app/src/main/res/menu/edit_excursion_menu.xml
+++ b/app/src/main/res/menu/edit_excursion_menu.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/edit"
-        android:title="Edit"
+        android:title="@string/edit"
         android:icon="@drawable/edit"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/delete"
-        android:title="Delete"
+        android:title="@string/delete"
         android:icon="@drawable/delete"
         app:showAsAction="ifRoom" />
 </menu>
