--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="light_blue">#E1F5FE</color>
+    <color name="blue">#4FC3F7</color>
+    <color name="dark_blue">#0288D1</color>
+    <color name="extra_dark_blue">#1A237E</color>
 </resources>
