--- a/app/src/main/res/layout/activity_vaction_detail.xml
+++ b/app/src/main/res/layout/activity_vaction_detail.xml
@@ -86,7 +86,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vacation_excursion_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/vacation_excursion_list_text"
         app:layout_constraintStart_toStartOf="parent" />
 
