--- a/app/src/main/res/layout/activity_vaction_detail.xml
+++ b/app/src/main/res/layout/activity_vaction_detail.xml
@@ -88,7 +88,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/vacation_excursion_list_text"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_excursion_button"
