--- a/app/src/main/res/menu/edit_excursion_menu.xml
+++ b/app/src/main/res/menu/edit_excursion_menu.xml
@@ -9,6 +9,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/notify"
+        android:title="@string/notify"
+        android:icon="@drawable/notify"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/delete"
         android:title="@string/delete"
         android:icon="@drawable/delete"
