--- a/app/src/main/res/menu/vacation_list_menu.xml
+++ b/app/src/main/res/menu/vacation_list_menu.xml
@@ -6,4 +6,9 @@
         android:title="@string/search"
         android:icon="@drawable/search"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/report"
+        android:title="@string/generate_report"
+        app:showAsAction="never" />
 </menu>
