--- a/app/src/main/res/layout/report_list_item.xml
+++ b/app/src/main/res/layout/report_list_item.xml
@@ -1,49 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!-- TODO: fix table formatting -->
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <!-- TODO: fix table formatting -->
-
-    <TableRow
-        android:id="@+id/report_row"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+    android:stretchColumns="1">
 
         <TextView
             android:id="@+id/report_name_text"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:text="Vacation Name" />
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:gravity="start"
+            tools:text="Vacation Name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/report_start_date_text" />
 
         <TextView
             android:id="@+id/report_start_date_text"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:text="Start Date" />
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:gravity="start"
+            tools:text="Start Date"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/report_name_text"
+            app:layout_constraintEnd_toStartOf="@id/report_end_date_text" />
 
         <TextView
             android:id="@+id/report_end_date_text"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:text="End Date" />
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:gravity="start"
+            tools:text="End Date"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/report_start_date_text"
+            app:layout_constraintEnd_toStartOf="@id/report_accommodations_text" />
 
         <TextView
             android:id="@+id/report_accommodations_text"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:text="Accommodations" />
-
-    </TableRow>
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:gravity="start"
+            tools:text="Accommodations"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/report_end_date_text"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
