Add encrypted login functionality

--- a/app/src/main/res/menu/vacation_list_menu.xml
+++ b/app/src/main/res/menu/vacation_list_menu.xml
@@ -11,4 +11,9 @@
         android:id="@+id/report"
         android:title="@string/generate_report"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/sample_data"
+        android:title="@string/create_sample_data"
+        app:showAsAction="never" />
 </menu>
