--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="blue">#4FC3F7</color>
     <color name="dark_blue">#0288D1</color>
     <color name="extra_dark_blue">#1A237E</color>
+
+    <color name="red">#B71C1C</color>
 </resources>
