Create menu option to create sample data for excursions

--- a/app/src/main/res/menu/edit_vacation_menu.xml
+++ b/app/src/main/res/menu/edit_vacation_menu.xml
@@ -24,4 +24,9 @@
         android:title="@string/delete"
         android:icon="@drawable/delete"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/sample_excursions"
+        android:title="@string/create_sample_data"
+        app:showAsAction="never" />
 </menu>
